<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:weightSum="1">
    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="match_parent" android:layout_height="match_parent">
        <RadioGroup android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radioGroup1" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_marginTop="53dp" android:layout_alignParentRight="true">
            <RadioButton android:layout_height="wrap_content" android:checked="true" android:id="@+id/radio0" android:text="@string/exam_option_type_1" android:layout_width="match_parent"></RadioButton>
            <RadioButton android:layout_height="wrap_content" android:id="@+id/radio1" android:text="@string/exam_option_type_2" android:layout_width="match_parent"></RadioButton>
        	<RadioButton android:layout_height="wrap_content" android:id="@+id/radio1" android:layout_width="match_parent" android:text="@string/exam_option_type_3"></RadioButton>
        	<RadioButton android:layout_height="wrap_content" android:id="@+id/radio1" android:layout_width="match_parent" android:text="@string/exam_option_type_4"></RadioButton>
        </RadioGroup>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_marginTop="18dp" android:layout_width="match_parent" android:text="@string/exam_option_title_1"></TextView>
    </RelativeLayout>
    
</LinearLayout>
